<resources>
    <string name="app_name">Test Project App</string>
<string name="lbl_thu">Thu</string>
<string name="lbl_company_name">Company Name*</string>
<string name="lbl_cgi">CGI</string>
<string name="lbl_logout">Logout</string>
<string name="lbl_offer">Offer</string>
<string name="lbl_reset_password">Reset Password</string>
<string name="lbl_very_good">Very Good</string>
<string name="msg_stones_of_the_d">Stones of the Day</string>
<string name="lbl_gujrat">Gujrat</string>
<string name="lbl_395006">395006</string>
<string name="lbl_your_upload">Your Upload</string>
<string name="lbl_0_40_0_49">0.40-0.49</string>
<string name="lbl_7_05_12_05">7.05, 12.05</string>
<string name="lbl_50">50</string>
<string name="lbl_8_50">8.50</string>
<string name="msg_show_only_diffe">Show only difference</string>
<string name="lbl_0_18_0_29">0.18-0.29</string>
<string name="msg_set_your_new_pa">Set your new password and sign in again.</string>
<string name="lbl_normal">Normal</string>
<string name="lbl_place_an_offer">Place an Offer</string>
<string name="lbl_slightly_thin">Slightly Thin</string>
<string name="lbl_emerald">Emerald</string>
<string name="lbl_enquiry">Enquiry</string>
<string name="lbl_from">From</string>
<string name="lbl_to">To</string>
<string name="lbl_7_day">7 Day</string>
<string name="lbl_print">Print</string>
<string name="lbl_asscher">Asscher</string>
<string name="lbl_crystal_surface">Crystal Surface</string>
<string name="lbl_sort_by">Sort By</string>
<string name="lbl_62_50">62.50%</string>
<string name="lbl_surat">Surat</string>
<string name="lbl_q_r">Q-R</string>
<string name="lbl_feaured_stones">Feaured Stones</string>
<string name="lbl_3ex">3EX</string>
<string name="lbl_30">30</string>
<string name="lbl_31">31</string>
<string name="lbl_no_bgm">NO BGM</string>
<string name="lbl_password">Password*</string>
<string name="lbl_advance">Advance</string>
<string name="lbl_sales_person">Sales Person</string>
<string name="msg_11_20_12_30_14">11.20*12.30*14.57</string>
<string name="lbl_brown">Brown</string>
<string name="lbl_20">20</string>
<string name="lbl_23">23</string>
<string name="lbl_24">24</string>
<string name="lbl_21">21</string>
<string name="lbl_22">22</string>
<string name="lbl_my_offer">My Offer</string>
<string name="lbl_27">27</string>
<string name="lbl_28">28</string>
<string name="lbl_gsi">GSI</string>
<string name="lbl_25">25</string>
<string name="lbl_26">26</string>
<string name="lbl_diamnow">DiamNow</string>
<string name="lbl_29">29</string>
<string name="lbl_8_01">8.01</string>
<string name="lbl_symmentry">Symmentry</string>
<string name="lbl_abraded">Abraded</string>
<string name="msg_email_verificat">Email Verification</string>
<string name="lbl_my_reminder">My Reminder</string>
<string name="lbl_polished">Polished</string>
<string name="lbl_dor_inventory">DOR Inventory</string>
<string name="lbl_12">12</string>
<string name="lbl_new_diamonds">New Diamonds</string>
<string name="lbl_13">13</string>
<string name="lbl_my_comment">My Comment</string>
<string name="msg_ridhs_ruby_diam">Ridhs Ruby Diamond</string>
<string name="msg_business_inform">Business Information</string>
<string name="lbl_10">10</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_11">11</string>
<string name="lbl_16">16</string>
<string name="lbl_17">17</string>
<string name="lbl_pcs">Pcs</string>
<string name="lbl_14">14</string>
<string name="lbl_15">15</string>
<string name="lbl_18">18</string>
<string name="lbl_feather">Feather</string>
<string name="lbl_19">19</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="msg_20_10_2020_16da">20-10-2020 16days</string>
<string name="lbl_fax_number">Fax Number</string>
<string name="lbl_add_to_cart">Add to Cart</string>
<string name="msg_exclusive_diamo">Exclusive Diamonds</string>
<string name="lbl_canadamark">Canadamark</string>
<string name="lbl_verified">Verified</string>
<string name="lbl_slight">Slight</string>
<string name="lbl_953185901">953185901</string>
<string name="lbl_pavilion_angle">Pavilion Angle</string>
<string name="msg_next_identity">Next : Identity Proof</string>
<string name="lbl_fair">Fair</string>
<string name="lbl_my_bid">My Bid</string>
<string name="lbl_more">More</string>
<string name="lbl_quick_search">Quick Search</string>
<string name="lbl_si1">SI1</string>
<string name="lbl_si2">SI2</string>
<string name="lbl_hrd">HRD</string>
<string name="lbl_search_diamonds">Search Diamonds</string>
<string name="lbl_o_p">O-P</string>
<string name="lbl_or">or</string>
<string name="lbl_7_27">7.27</string>
<string name="lbl_63_50">63.50%</string>
<string name="lbl_place_order">Place Order</string>
<string name="lbl_none">None</string>
<string name="lbl_depth">Depth%</string>
<string name="lbl_basic_details">Basic Details</string>
<string name="lbl_dis">Dis%</string>
<string name="lbl_extra_facet">Extra Facet</string>
<string name="lbl_ridhs158">Ridhs158*!~</string>
<string name="lbl_no">No</string>
<string name="msg_business_identi">Business Identity Proof</string>
<string name="lbl_green">Green</string>
<string name="lbl_shape">Shape</string>
<string name="lbl_0_60_0_69">0.60-0.69</string>
<string name="lbl_h_a_ex">H&amp;A Ex</string>
<string name="lbl_add_offer_valid">Add offer valid</string>
<string name="lbl_home">Home</string>
<string name="lbl_first_name">First Name*</string>
<string name="lbl_301">-30%</string>
<string name="lbl_country">Country*</string>
<string name="lbl_pear">Pear</string>
<string name="lbl_nv">NV</string>
<string name="lbl_d_e_f">D, E, F</string>
<string name="lbl_vvs2">VVS2</string>
<string name="lbl_vvs1">VVS1</string>
<string name="lbl_designation">Designation*</string>
<string name="lbl_fancy">FANCY</string>
<string name="msg_internal_graini">Internal Graining</string>
<string name="lbl_859019531">859019531</string>
<string name="lbl_large">Large</string>
<string name="lbl_bruted">Bruted</string>
<string name="msg_sales_person_de">Sales Person Detail</string>
<string name="lbl_iidgr">IIDGR</string>
<string name="lbl_saved_search">Saved Search</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_photo_identity">Photo Identity Proof</string>
<string name="lbl_strong">Strong</string>
<string name="lbl_cancel">Cancel</string>
<string name="msg_enter_your_pers">Enter your personal details to start with sign up.</string>
<string name="lbl_edit_profile">Edit Profile</string>
<string name="lbl_dor_eligibie">DOR EligibIe</string>
<string name="lbl_chipped">Chipped</string>
<string name="lbl_na">NA</string>
<string name="lbl_xray">Xray</string>
<string name="lbl_clear_selection">Clear Selection</string>
<string name="lbl_border_line">Border Line</string>
<string name="lbl_culet">Culet</string>
<string name="lbl_my_office">My Office</string>
<string name="lbl_61_01">61.01%</string>
<string name="lbl_carat_range">Carat Range</string>
<string name="lbl_very_slight">Very Slight</string>
<string name="lbl_rap_price">Rap Price</string>
<string name="lbl_select_a_day">Select a Day</string>
<string name="lbl_fri">Fri</string>
<string name="lbl_language">Language</string>
<string name="lbl_hold">Hold</string>
<string name="lbl_vs1">VS1</string>
<string name="lbl_milky">Milky</string>
<string name="lbl_vs2">VS2</string>
<string name="msg_promotional_off">Promotional offers, newsletters and stock updates</string>
<string name="lbl_business_type">Business Type*</string>
<string name="lbl_good">Good</string>
<string name="lbl_ags">AGS</string>
<string name="lbl_tue">Tue</string>
<string name="lbl_basic">Basic</string>
<string name="lbl_see_more">See More</string>
<string name="lbl_bruise">Bruise</string>
<string name="lbl_62_30">62.30</string>
<string name="lbl_0261">0261</string>
<string name="lbl_my_demand">My Demand</string>
<string name="lbl_my_order">My Order</string>
<string name="lbl_26_58">-26.58%</string>
<string name="msg_ridh_s_joy_gmai">ridh\'s_joy@gmail.com</string>
<string name="lbl_if">IF</string>
<string name="lbl_clarity_color">Clarity
Color</string>
<string name="lbl_215">215</string>
<string name="lbl">|</string>
<string name="lbl_med">MED</string>
<string name="msg_terms_conditi">Terms &amp; Condition</string>
<string name="msg_certificate_num">Certificate Number</string>
<string name="lbl_2568763">2568763</string>
<string name="lbl_ridhs">Ridhs</string>
<string name="lbl_1">1</string>
<string name="lbl_2">2</string>
<string name="lbl_3">3</string>
<string name="lbl_retailler">Retailler</string>
<string name="lbl_4">4</string>
<string name="lbl_5">5</string>
<string name="lbl_6">6</string>
<string name="lbl_7">7</string>
<string name="lbl_8">8</string>
<string name="lbl_50_25">50.25</string>
<string name="lbl_9">9</string>
<string name="lbl_201">20��</string>
<string name="msg_21_10_2020_at_0">21-10-2020 at 01:43 PM</string>
<string name="lbl_color_shade">Color Shade</string>
<string name="msg_expected_discou">Expected Discount%</string>
<string name="lbl_9_5">9.5</string>
<string name="lbl_oval">Oval</string>
<string name="lbl_avg_price_ct">Avg. Price/Ct</string>
<string name="lbl_forgot_password">Forgot Password</string>
<string name="lbl_fluorescence">Fluorescence</string>
<string name="lbl_other">Other</string>
<string name="lbl_1_day">1 Day</string>
<string name="lbl_manufacturer">Manufacturer</string>
<string name="lbl_compare">Compare</string>
<string name="lbl_key_to_symbol">Key To Symbol</string>
<string name="lbl_7_27x7_3_14_15">7.27X7.3-14.15</string>
<string name="lbl_round_pear">Round, Pear</string>
<string name="lbl_excellent">Excellent</string>
<string name="lbl_15_day">15 Day</string>
<string name="lbl_lab">Lab</string>
<string name="lbl_i">I</string>
<string name="lbl_j">J</string>
<string name="lbl_measurements">Measurements</string>
<string name="lbl_k">K</string>
<string name="lbl_l">L</string>
<string name="lbl_slightly_large">Slightly Large</string>
<string name="lbl_m">M :</string>
<string name="lbl_n">N</string>
<string name="lbl_my_watchlist">My Watchlist</string>
<string name="msg_don_t_have_an_a">Don\'t have an account? Sign Up</string>
<string name="lbl_file_upload">File Upload</string>
<string name="lbl_email_address">Email Address*</string>
<string name="msg_confirm_passwor">Confirm Password*</string>
<string name="lbl_s">S :</string>
<string name="lbl_t">T :</string>
<string name="lbl_fl">FL</string>
<string name="lbl_12_50_carat">12.50
Carat</string>
<string name="lbl_fi">FI</string>
<string name="lbl_state">State*</string>
<string name="lbl_30_day">30 Day</string>
<string name="lbl_15_800">15,800</string>
<string name="msg_offered_price">Offered Price (Ct)</string>
<string name="lbl_my_hold">My Hold</string>
<string name="lbl_keywords">Keywords</string>
<string name="lbl_stones_of_day">Stones of Day</string>
<string name="lbl_length">Length</string>
<string name="msg_diamond_on_auct">Diamond On Auction</string>
<string name="lbl_edit">Edit</string>
<string name="lbl_45879351">45879351</string>
<string name="msg_how_do_you_know">How do you know us?</string>
<string name="lbl_retailer">Retailer</string>
<string name="msg_does_not_contai">Does not contains</string>
<string name="lbl_username">Username*</string>
<string name="msg_security_inform">Security Information</string>
<string name="lbl_add_demand">Add demand</string>
<string name="lbl_sun">Sun</string>
<string name="lbl_d">D :</string>
<string name="lbl_h_a">H&amp;A</string>
<string name="lbl_e">E</string>
<string name="lbl_last_name">Last Name*</string>
<string name="lbl_offer_submitted">Offer Submitted</string>
<string name="msg_terms_and_condi">Terms and Condition*</string>
<string name="msg_sign_in_as_gues">Sign In as Guest</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_go_to_my_offer">Go to My Offer</string>
<string name="msg_your_offer_has">Your offer has been submitted successfully.</string>
<string name="lbl_mobile_number">Mobile Number*</string>
</resources>