<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInGuestVM" type="com.example.app.modules.signinguest.data.viewmodel.SignInGuestVM"/>
    </data>
    <FrameLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <ImageView android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent" imageRes="@{@drawable/_6ddbef53df2723c2ac4caadaeead4de8}"/>
        <LinearLayout android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
                android:layout_height="wrap_content" android:layout_width="match_parent">
                <FrameLayout android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_46px" android:layout_width="match_parent">
                    <ImageView android:layout_gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent" android:src="@drawable/_3f48b9e934965e66041609aa163329bb"/>
                    <TextView android:fontFamily="@font/avenir"
                        android:gravity="top|start"
                        android:layout_gravity="center|start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_46px"
                        android:layout_width="wrap_content"
                        android:text="@string/msg_sign_in_as_gues"
                        android:textColor="@color/gray_900"
                        android:textFontWeight="500"
                        android:textSize="@dimen/_20px" android:textStyle="bold"/>
                    <ImageView android:layout_gravity="center|start"
                        android:layout_height="@dimen/_16px"
                        android:layout_marginStart="@dimen/_16px"
                        android:layout_width="@dimen/_9px" android:src="@drawable/_486a779fcc9c2651063e6842867c37d6"/>
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>
            <FrameLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_20px" android:layout_width="match_parent">
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_white_a100"
                    android:fontFamily="@font/avenir"
                    android:gravity="center|start"
                    android:hint="@string/lbl_first_name"
                    android:id="@+id/etFirstName"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12px"
                    android:paddingStart="@dimen/_30px"
                    android:paddingTop="@dimen/_12px"
                    android:textColor="@color/black_100"
                    android:textColorHint="@color/black_100"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_16px" android:textStyle="bold"/>
                <ImageView android:layout_gravity="center|start"
                    android:layout_height="@dimen/_44px"
                    android:layout_marginStart="@dimen/_1px"
                    android:layout_width="@dimen/_44px" android:src="@drawable/_726507a4530aeb59cf03ee6b3b5292ca"/>
            </FrameLayout>
            <FrameLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_16px" android:layout_width="match_parent">
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_white_a100"
                    android:fontFamily="@font/avenir"
                    android:gravity="center|start"
                    android:hint="@string/lbl_last_name"
                    android:id="@+id/etLastName"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12px"
                    android:paddingStart="@dimen/_30px"
                    android:paddingTop="@dimen/_12px"
                    android:textColor="@color/black_100"
                    android:textColorHint="@color/black_100"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_16px" android:textStyle="bold"/>
                <ImageView android:layout_gravity="center|start"
                    android:layout_height="@dimen/_44px"
                    android:layout_marginStart="@dimen/_1px"
                    android:layout_width="@dimen/_44px" android:src="@drawable/_726507a4530aeb59cf03ee6b3b5292ca"/>
            </FrameLayout>
            <FrameLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32px"
                android:layout_marginTop="@dimen/_16px" android:layout_width="match_parent">
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_white_a100"
                    android:fontFamily="@font/avenir"
                    android:gravity="center|start"
                    android:hint="@string/lbl_email_address"
                    android:id="@+id/etEmailAddress"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12px"
                    android:paddingStart="@dimen/_30px"
                    android:paddingTop="@dimen/_12px"
                    android:textColor="@color/black_100"
                    android:textColorHint="@color/black_100"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_16px" android:textStyle="bold"/>
                <ImageView android:layout_gravity="center|start"
                    android:layout_height="@dimen/_44px"
                    android:layout_marginStart="@dimen/_1px"
                    android:layout_width="@dimen/_44px" android:src="@drawable/_726507a4530aeb59cf03ee6b3b5292ca"/>
            </FrameLayout>
            <FrameLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_16px" android:layout_width="match_parent">
                <ImageView android:layout_gravity="center"
                    android:layout_height="@dimen/_46px" android:layout_width="@dimen/_343px"/>
                <LinearLayout android:layout_gravity="center|start"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1px"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_44px"
                        android:layout_width="@dimen/_44px" android:src="@drawable/_726507a4530aeb59cf03ee6b3b5292ca"/>
                    <ImageView android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_16px"
                        android:layout_marginEnd="@dimen/_17px"
                        android:layout_width="@dimen/_8px" android:src="@drawable/_78c28010bf5f2da50acb7eded1243d03"/>
                    <TextView android:fontFamily="@font/avenir"
                        android:gravity="top|start"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_17px"
                        android:layout_width="wrap_content"
                        android:text="@string/lbl_mobile_number"
                        android:textColor="@color/black_100"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_16px" android:textStyle="bold"/>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_16px" android:layout_width="match_parent">
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_white_a100"
                    android:fontFamily="@font/avenir"
                    android:gravity="top|start"
                    android:hint="@string/lbl_company_name"
                    android:id="@+id/etCompanyName"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_12px"
                    android:paddingStart="@dimen/_30px"
                    android:paddingTop="@dimen/_12px"
                    android:textColor="@color/black_100"
                    android:textColorHint="@color/black_100"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_16px" android:textStyle="bold"/>
                <ImageView android:layout_gravity="center|start"
                    android:layout_height="@dimen/_44px"
                    android:layout_marginStart="@dimen/_1px"
                    android:layout_width="@dimen/_44px" android:src="@drawable/_726507a4530aeb59cf03ee6b3b5292ca"/>
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:fontFamily="@font/avenir"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_16px"
                android:layout_width="wrap_content"
                android:text="@string/msg_terms_and_condi"
                android:textColor="@color/gray_900"
                android:textFontWeight="400" android:textSize="@dimen/_14px"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:fontFamily="@font/avenir"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_16px"
                android:layout_width="wrap_content"
                android:text="@string/msg_promotional_off"
                android:textColor="@color/gray_900"
                android:textFontWeight="400" android:textSize="@dimen/_14px"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/indigo_300"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:id="@+id/btnSignInAsGues"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_30px"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11px"
                android:paddingEnd="@dimen/_30px"
                android:paddingStart="@dimen/_30px"
                android:paddingTop="@dimen/_13px"
                android:text="@string/msg_sign_in_as_gues"
                android:textColor="@color/white_A700"
                android:textFontWeight="500"
                android:textSize="@dimen/_16px" android:textStyle="bold"/>
            <TextView android:fontFamily="@font/avenir"
                android:gravity="top|start"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20px"
                android:layout_width="wrap_content"
                android:text="@string/lbl_or"
                android:textColor="@color/black_100"
                android:textFontWeight="400"
                android:textSize="@dimen/_16px" android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/gray_100"
                android:fontFamily="@font/avenir"
                android:gravity="center" android:id="@+id/btnSignIn"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16px"
                android:layout_marginStart="@dimen/_16px"
                android:layout_marginTop="@dimen/_19px"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11px"
                android:paddingEnd="@dimen/_30px"
                android:paddingStart="@dimen/_30px"
                android:paddingTop="@dimen/_13px"
                android:text="@string/lbl_sign_in"
                android:textColor="@color/indigo_300"
                android:textFontWeight="500"
                android:textSize="@dimen/_16px" android:textStyle="bold"/>
            <TextView android:fontFamily="@font/avenir"
                android:gravity="top|start"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20px"
                android:layout_width="wrap_content"
                android:text="@string/msg_don_t_have_an_a"
                android:textColor="@color/black_100"
                android:textFontWeight="400"
                android:textSize="@dimen/_16px" android:textStyle="bold"/>
        </LinearLayout>
    </FrameLayout>
</layout>
